tests/derivation/core/trivial 002-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: No constructors found for the type `Builtin.Void`

DerivedGen:1
 06 | 
 07 | %language ElabReflection
 08 | 
 09 | checkedGen : Fuel -> Gen MaybeEmpty Void
 10 | checkedGen = deriveGen
                   ^^^^^^^^^

